--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ script:
   - "mvn -f FinalProjeDeryaCayiroglu/pom.xml clean install cobertura:cobertura"
 jdk:
   - openjdk8
-after_succes:
+after_success:
   - bash <(curl -s https://codecov.io/bash)
